[package]
name = "brave-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.6.0", features = ["full"] }
hyper-tls = { version = "0.6.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
http-body-util = "0.1.3"
hyper-util = { version = "0.1.0", features = ["http1"] }
bytes = "1.10.1"
reqwest = { version = "0.12.22", features = ["json"] }
thiserror = "2.0.12"
tokio = { version = "*", features = ["full"] }
