[package]
name = "brave-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
reqwest = { version = "0.12.22", features = ["json"] }
thiserror = "2.0.12"
tokio = { version = "*", features = ["full"] }
derive_builder = "*"
urlencoding = "*"

[dev-dependencies]
httpmock = "0.7.0-rc.1"
